Fixes a z-index issue on back to index button

--- a/CaseStudiesApp/css/style.css
+++ b/CaseStudiesApp/css/style.css
@@ -255,6 +255,7 @@ ol ol li{
   right: 0px;
   top: 50%;
   margin-top: -35px;
+  z-index: 10;
   display: none;
 }
 
